assets/12-kuber-08/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: deployment
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
              name: http-port
            - containerPort: 10443
              name: https-port
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "150m"
              memory: "200Mi"
        - name: nginx-app
          image: nginx:1.25.3
          volumeMounts:
            - name: nginx
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: nginx
          configMap:
            name: nginx-configmap
