assets/12-kuber-08/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: main-ingess
spec:
  tls:
    - hosts:
        - my-site.ru
      secretName: nginx-tls
  rules:
    - host: my-site.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 443
